changed region to europe-west1

--- a/installation-testing/builds/delivery-e2e.cloudbuild.yaml
+++ b/installation-testing/builds/delivery-e2e.cloudbuild.yaml
@@ -56,5 +56,5 @@ steps:
 
 # Specify a default value for optional variables
 substitutions:
-  _REGION: us-central1
+  _REGION: europe-west1
   _E2E_DEPLOYER_SHA: latest
