--- a/ops/api-build.cloudbuild.yaml
+++ b/ops/api-build.cloudbuild.yaml
@@ -22,9 +22,9 @@ steps:
       - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/content-api/content-api:${_IMAGE_TAG}'
       - '${_CONTEXT}'
 
-# Default to us-central1
+# Default to europe-west1
 substitutions:
-  _REGION: us-central1
+  _REGION: europe-west1
   _IMAGE_TAG: $SHORT_SHA
 
 # Store in Artifact Registry
