--- a/ops/e2e-runner-build.cloudbuild.yaml
+++ b/ops/e2e-runner-build.cloudbuild.yaml
@@ -25,9 +25,9 @@ steps:
         ${_REGION}-docker.pkg.dev/${PROJECT_ID}/e2e-testing/runner:${_IMAGE_TAG} \
         . 
 
-# Default to us-central1 
+# Default to europe-west1 
 substitutions:
-  _REGION: us-central1
+  _REGION: europe-west1
   _IMAGE_TAG: latest
 
 # Store in Artifact Registry
